nearby sharing is wokring with ui and everything